--- a/react-app/src/components/print.css
+++ b/react-app/src/components/print.css
@@ -1,25 +1,26 @@
 @media print {
     body * {
-      visibility: hidden;
+        visibility: hidden;
     }
-  
-    .print, .print * {
-      visibility: visible !important;
+
+    .print,
+    .print * {
+        visibility: visible !important;
     }
-  
+
+    .helpertext {
+        display: contents !important;
+    }
+
     .print {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: white;
-      color: black;
-      padding:0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 0;
     }
-  
-    /* Optional: Verhindert Seitenumbruch mitten in Tabellen */
+
     table {
-      page-break-inside: avoid;
+        page-break-after: avoid;
     }
-  }
-  
+}
